name:           zeta
version:        0.0
synopsis:       A Simple Mathematics Library.
homepage:       http://github.com/sykora/zeta/

author:         P.C. Shyamshankar <sykora@lucentbeing.com>
maintainer:     P.C. Shyamshankar <sykora@lucentbeing.com>
copyright:      © P.C. Shyamshankar

license:        GPL-3
license-file:   LICENSE

category:       Math
build-type:     Simple
cabal-version:  >=1.12

library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:
        Math.Arithmetic.Divisibility

    build-depends:
        base
