name:           zeta
version:        0.1
synopsis:       A Simple Mathematics Library.
homepage:       http://github.com/sykora/zeta/

author:         P.C. Shyamshankar <sykora@lucentbeing.com>
maintainer:     P.C. Shyamshankar <sykora@lucentbeing.com>
copyright:      © P.C. Shyamshankar

license:        GPL-3
license-file:   LICENSE

category:       Math
build-type:     Simple
cabal-version:  >=1.12

library
    default-language: Haskell2010
    hs-source-dirs: src

    exposed-modules:
        Math.Arithmetic.Digits,
        Math.Arithmetic.Divisibility

    build-depends:
        base

test-suite all
    default-language: Haskell2010
    hs-source-dirs: src, test
    type: exitcode-stdio-1.0
    main-is: Test.hs

    build-depends:
        base,

        HUnit,
        QuickCheck,

        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2,

        zeta
